@@ -1,3 +1,7 @@
+2007-01-23  Brian Gough  <bjg@network-theory.co.uk>
+
+	* betainv.c (gsl_cdf_beta_Pinv): avoid generating a NaN for lx > 0
+
 2006-04-18  Brian Gough  <bjg@network-theory.co.uk>
 
 	* betainv.c (gsl_cdf_beta_Qinv): fix prototype const
